@@ -1,3 +1,8 @@
+2018-02-25 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Headers/AppKit/NSKeyValueBinding.h,
+	* Source/NSKeyValueBinding.m: Add helper function NSIsControllerMarker.
+
 2018-02-09 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/GSDisplayServer.m: Store the current display server in a
